fix: reallow overflow for body

--- a/tetris-web/src/app/globals.css
+++ b/tetris-web/src/app/globals.css
@@ -112,9 +112,6 @@
   --sidebar-ring: oklch(0.552 0.016 285.938);
 }
 
-body {
-  overflow: hidden;
-}
 @layer base {
   * {
     @apply border-border outline-ring/50;
